--- a/web/src/app/sale/customer-list/customer-list.component.html
+++ b/web/src/app/sale/customer-list/customer-list.component.html
@@ -95,6 +95,10 @@
                           <tr class="text-center" *ngFor="let data of dataList let i = index;"
                             style="white-space: nowrap;">
                             <td style="width: 7%;">
+                              <button class="detail_icons bg-btn" >
+                                <i class="fas fa-info-circle ms-1" data-mdb-toggle="modal"
+                                  data-mdb-target="#exampleModal"> </i>
+                              </button>
                               <mat-icon class="edit_icon ms-1" [routerLink]="['/sale/billing',data.ID,0,]">edit</mat-icon>
                               <mat-icon class="delete_icon ms-1" (click)="deleteItem(i)">delete_forever</mat-icon>
                             </td>
