--- a/web/src/app/sale/bill-list/bill-list.component.html
+++ b/web/src/app/sale/bill-list/bill-list.component.html
@@ -115,10 +115,10 @@
                         <tr *ngFor="let Bdata of dataList ; let i = index;"
                           [ngStyle]="{whiteSpace: 'nowrap', overflowX: 'auto'}">
                           <td>
-                            <button class="bg-btn msg">
+                            <button title="Messenger" class="bg-btn msg">
                               <i class="fab fa-facebook-messenger"></i>
                             </button>
-                            <button class="detail_icons bg-btn" (click)="openModal(content,Bdata)">
+                            <button title="Payment Hsitory" class="detail_icons bg-btn" (click)="openModal(content,Bdata)">
                               <i class="fas fa-info-circle ms-1" data-mdb-toggle="modal"
                                 data-mdb-target="#exampleModal"> </i>
                             </button>
@@ -129,10 +129,12 @@
                               <mat-icon class="delete_icon ms-1" >delete_forever</mat-icon>
                             </button>
 
-                            <button class="bg-btn" [routerLink]="['/sale/billing', Bdata.CustomerID ,Bdata.ID]">
+                            <button  title="Payment" class="bg-btn" [routerLink]="['/sale/billing', Bdata.CustomerID ,Bdata.ID]">
                               <mat-icon class="edit_icon ms-1">attach_money </mat-icon>
                             </button>
-
+                            <button  title="Eye Power" class="bg-btn" >
+                              <mat-icon class="edit_icon pt-1 ms-1">remove_red_eye</mat-icon>
+                            </button>
 
                           </td>
                           <td>{{ dataList.length - i }}</td>
