--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -89,7 +89,7 @@
                 aria-hidden="true"></i></a>
             <div class="drop-content" id="collapseExample">
               <a href="javascript:void(0)" [routerLink]="['/inventory/supplier']" id="collapseExample">Supplier</a>
-              <a href="javascript:void(0)" [routerLink]="['/inventory/purchaseList']" id="collapseExample">Purchase</a>
+              <a href="javascript:void(0)" [routerLink]="['/inventory/purchaseList',0]" id="collapseExample">Purchase</a>
               <a href="javascript:void(0)" [routerLink]="['/inventory/product-transfer']" id="collapseExample">Product Transfer</a>
               <a href="javascript:void(0)" [routerLink]="['/inventory/inventory-summary']" id="collapseExample">Product Summary</a>
               <a href="javascript:void(0)" [routerLink]="['/inventory/search-barcode']" id="collapseExample">Search Barcode</a>
