--- a/web/src/app/inventory/purchase-list/purchase-list.component.html
+++ b/web/src/app/inventory/purchase-list/purchase-list.component.html
@@ -5,10 +5,14 @@
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-0">
           <div class="card p-0">
             <div class="header p-2 py-0 pt-1">
-              <div class="row">
+              <!-- Purchase all Supplier Wise-->
+              <div *ngIf="this.id === '0'" class="row">
                 <div class="col-md-1 col-8 p-0 ms-3">
-                  <h2>Purchase <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"
-                      (click)="exportAsXLSX()"></i></h2>
+                  <h2>Purchase
+                    <button class="bg-none" (click)="exportAsXLSX()">
+                      <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"></i>
+                    </button>
+                  </h2>
                 </div>
                 <div class="col-md-2 col-1 ps-md-0 ps-1">
                   <select class=" form-control"
@@ -40,63 +44,99 @@
                   </button>
                 </div>
               </div>
+
+              <!-- Purchase SupplierID Wise-->
+              <div *ngIf="this.id !== '0' && user.UserGroup === 'CompanyAdmin'" class="row">
+                <div class="col-md-3 col-8 p-0 ms-3">
+                  <h2>Purchase For <span style="color:#232323;">{{this.dataList[0]?.SupplierName}} </span>
+                    <button class="bg-none" (click)="exportAsXLSX()">
+                      <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"></i>
+                    </button>
+                  </h2>
+                </div>
+                <div class="col-md-2 col-4 pt-2" style="border: 1px solid #b4b4b4; height: 38px;">
+                  <span style="font-size:15px;font-weight:bold;">Total Amount : </span>
+                  <span
+                    style="color:#232323;font-size:15px;font-weight:bold;">{{CustomerTotal.TotalAmount.toFixed(2)}}</span>
+                </div>
+                <div class="col-md-2 col-4 pt-2" style="border: 1px solid #b4b4b4; height: 38px;">
+                  <span style="font-size:15px;font-weight:bold;">Due Amount : </span>
+                  <span
+                    style="color:#232323;font-size:15px;font-weight:bold;">{{CustomerTotal.DueAmount.toFixed(2)}}</span>
+                </div>
+                <div class="col-md-2 col-4 pt-2" style="border: 1px solid #b4b4b4; height: 38px;">
+                  <span style="font-size:15px;font-weight:bold;">Paid Amount : </span>
+                  <span
+                    style="color:#232323;font-size:15px;font-weight:bold;">{{CustomerTotal.TotalAmount.toFixed(2)-CustomerTotal.DueAmount.toFixed(2)}}</span>
+                </div>
+                <div class="col-md-2 col-4 ms-auto">
+                  <div class="input-group">
+                    <input placeholder="Search" [(ngModel)]="term" #searching mdbInput type="search" id="form1"
+                      class="form-control" />
+                  </div>
+                </div>
+                <div class="col-md-1 col-1" style="width: 40px;padding: 0;">
+                  <button class="bg-none" [routerLink]="['/inventory/purchase',0]">
+                    <mat-icon class="col-white plus_icon me-1"> add</mat-icon>
+                  </button>
+                </div>
+              </div>
             </div>
             <!-- purchase list start -->
             <div class="body mt-md-2 mt-5 p-2">
               <div class="row" *ngIf="gridview">
                 <div class="col-sm-12" style="overflow: auto; height: 530px;">
-                    <table class="table table-striped table-hover table-sm table-bordered"
-                      style="border: 2px solid #fff !important;">
-                      <thead>
-                        <tr>
-                          <th style="text-align: left;">Action</th>
-                          <th style="text-align: left;">S.No</th>
-                          <th style="text-align: left;">SupplierName</th>
-                          <th style="text-align: left;">InvoiceNo</th>
-                          <th style="text-align: left;">ReceivedAt</th>
-                          <th style="text-align: left;">PurchaseDate</th>
-                          <th style="text-align: left;">PaymentStatus</th>
-                          <th style="text-align: left;">GSTNo</th>
-                          <th style="text-align: left;">Quantity</th>
-                          <th style="text-align: left;">InvoiceAmount</th>
-                          <th style="text-align: left;">Discount</th>
-                          <th style="text-align: left;">GSTAmount</th>
-                          <th style="text-align: left;">CreatedBy</th>
-                          <th style="text-align: left;">UpdatedBy</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr class="text-center" *ngFor="let data of dataList let i = index;"
-                          style="white-space: nowrap;">
-                          <td style="width: 5%;" >
-                            <button  class="detail_icons bg-btn" (click)="openModal(content,data)" >
-                              <i class="fas fa-info-circle" data-mdb-toggle="modal" data-mdb-target="#exampleModal"> </i>
-                            </button>
-                            <button class="bg-btn" [routerLink]="['/inventory/purchase',data.ID]">
-                              <mat-icon class="edit_icon ms-1">edit
-                              </mat-icon>
-                            </button>
-                            <button class="bg-btn" (click)="deleteItem(i)">
-                              <mat-icon class="delete_icon ms-1">delete_forever</mat-icon>
-                            </button>
-                          </td>
-                          <td>{{dataList.length - i }}</td>
-                          <td>{{data.SupplierName}}</td>
-                          <td>{{data.InvoiceNo}}</td>
-                          <td>{{data.ShopName}}<span [style.color]="'blue'"
-                              *ngIf="data.AreaName !== 'null'">({{data.AreaName}})</span></td>
-                          <td>{{data.PurchaseDate}}</td>
-                          <td>{{data.PaymentStatus}}</td>
-                          <td>{{(data.GSTNo !== 'null')? data.GSTNo: ''}}</td>
-                          <td>{{data.Quantity}}</td>
-                          <td>{{data.TotalAmount}}</td>
-                          <td>{{data.DiscountAmount}}</td>
-                          <td>{{data.GSTAmount}}</td>
-                          <td>{{data.CreatedPerson}}</td>
-                          <td>{{data.UpdatedPerson}}</td>
-                        </tr>
-                      </tbody>
-                    </table>
+                  <table class="table table-striped table-hover table-sm table-bordered"
+                    style="border: 2px solid #fff !important;">
+                    <thead>
+                      <tr>
+                        <th style="text-align: left;">Action</th>
+                        <th style="text-align: left;">S.No</th>
+                        <th style="text-align: left;">SupplierName</th>
+                        <th style="text-align: left;">InvoiceNo</th>
+                        <th style="text-align: left;">ReceivedAt</th>
+                        <th style="text-align: left;">PurchaseDate</th>
+                        <th style="text-align: left;">PaymentStatus</th>
+                        <th style="text-align: left;">GSTNo</th>
+                        <th style="text-align: left;">Quantity</th>
+                        <th style="text-align: left;">InvoiceAmount</th>
+                        <th style="text-align: left;">Discount</th>
+                        <th style="text-align: left;">GSTAmount</th>
+                        <th style="text-align: left;">CreatedBy</th>
+                        <th style="text-align: left;">UpdatedBy</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr class="text-center" *ngFor="let data of dataList let i = index;" style="white-space: nowrap;">
+                        <td style="width: 5%;">
+                          <button class="detail_icons bg-btn" (click)="openModal(content,data)">
+                            <i class="fas fa-info-circle" data-mdb-toggle="modal" data-mdb-target="#exampleModal"> </i>
+                          </button>
+                          <button class="bg-btn" [routerLink]="['/inventory/purchase',data.ID]">
+                            <mat-icon class="edit_icon ms-1">edit
+                            </mat-icon>
+                          </button>
+                          <button class="bg-btn" (click)="deleteItem(i)">
+                            <mat-icon class="delete_icon ms-1">delete_forever</mat-icon>
+                          </button>
+                        </td>
+                        <td>{{dataList.length - i }}</td>
+                        <td>{{data.SupplierName}}</td>
+                        <td>{{data.InvoiceNo}}</td>
+                        <td>{{data.ShopName}}<span [style.color]="'blue'"
+                            *ngIf="data.AreaName !== 'null'">({{data.AreaName}})</span></td>
+                        <td>{{data.PurchaseDate}}</td>
+                        <td>{{data.PaymentStatus}}</td>
+                        <td>{{(data.GSTNo !== 'null')? data.GSTNo: ''}}</td>
+                        <td>{{data.Quantity}}</td>
+                        <td>{{data.TotalAmount}}</td>
+                        <td>{{data.DiscountAmount}}</td>
+                        <td>{{data.GSTAmount}}</td>
+                        <td>{{data.CreatedPerson}}</td>
+                        <td>{{data.UpdatedPerson}}</td>
+                      </tr>
+                    </tbody>
+                  </table>
                 </div>
               </div>
             </div>
@@ -120,10 +160,10 @@
         <div class="row">
           <div class="col-md-4">
             <span style="font-size: 17px; font-weight: 600;color: #ff5100; ">InvoiceNo : </span>
-             <span style="font-size: 15px; color: #000;">{{this.paymentHistoryList[0]?.InvoiceNo}} </span>
+            <span style="font-size: 15px; color: #000;">{{this.paymentHistoryList[0]?.InvoiceNo}} </span>
           </div>
           <div class="col-md-4">
-            <span style="font-size: 17px; font-weight: 600; color: #ff5100">PurchaseDate : </span>  <span
+            <span style="font-size: 17px; font-weight: 600; color: #ff5100">PurchaseDate : </span> <span
               style="font-size: 15px; color: #000;">{{this.paymentHistoryList[0]?.PurchaseDate}}</span>
           </div>
           <div class="col-md-4">
@@ -131,11 +171,11 @@
               style="font-size: 15px; color: #000;">{{this.paymentHistoryList[0]?.PaymentType}} </span>
           </div>
           <div class="col-md-4" style="margin-top: 10px;">
-            <span style="font-size: 17px; font-weight: 600;color: #ff5100; ">PaymentStatus : </span>  <span
+            <span style="font-size: 17px; font-weight: 600;color: #ff5100; ">PaymentStatus : </span> <span
               style="font-size: 15px; color: #000;">{{this.paymentHistoryList[0]?.PaymentStatus}}</span>
           </div>
           <div class="col-md-4" style="margin-top: 10px;">
-            <span style="font-size: 17px; font-weight: 600;color: #ff5100; ">TotalAmount : </span>  <span
+            <span style="font-size: 17px; font-weight: 600;color: #ff5100; ">TotalAmount : </span> <span
               style="font-size: 15px; color: #000;">{{this.paymentHistoryList[0]?.TotalAmount}}</span>
           </div>
         </div>
@@ -147,9 +187,9 @@
                 <thead>
                   <tr>
                     <th style="text-align: left;">S.No</th>
-                    <th >PaymentMode</th>
-                    <th >PaidAmount</th>
-                    <th >DueAmount</th>
+                    <th>PaymentMode</th>
+                    <th>PaidAmount</th>
+                    <th>DueAmount</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -166,7 +206,6 @@
         </div>
       </div>
       <div class="modal-footer">
-
       </div>
     </form>
   </div>
