--- a/web/src/app/inventory/supplier/supplier.component.html
+++ b/web/src/app/inventory/supplier/supplier.component.html
@@ -286,6 +286,8 @@
                                 *ngIf="suBtn == false">Save</button>
                             <button type="button" mat-raised-button [routerLink]="['/inventory/supplier',0]"
                                 (click)="Clear()">Clear</button>
+                            <button *ngIf="this.suBtn" type="button" class="ms-3 " color="primary" mat-raised-button [routerLink]="['/inventory/purchaseList',data.ID]"
+                            (click)="modal.dismiss('Cross click')"  >Purchase Hsitory</button>
                         </div>
                     </div>
                 </div>
