update sale report

--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -127,6 +127,7 @@
             <a class="dropBtn" data-target="#collapseExample">Report <i class="fa fa-caret-down"
                 aria-hidden="true"></i></a>
             <div class="drop-content" id="collapseExample">
+              <a href="javascript:void(0)" [routerLink]="['/report/sale']" id="collapseExample">Sale</a>
               <a href="javascript:void(0)" [routerLink]="['/report/purchase']" id="collapseExample">Purchase</a>
               <a href="javascript:void(0)" [routerLink]="['/report/inventory']" id="collapseExample">Inventory</a>
               <a href="javascript:void(0)" [routerLink]="['/report/product-transfer']" id="collapseExample">Product Transfer</a>
