--- a/server/views/PurchasePDF.ejs
+++ b/server/views/PurchasePDF.ejs
@@ -95,7 +95,7 @@
                         <%=data.PurchaseMaster.GSTAmount%>
                     </th>
                     <th>
-                        <%=data.PurchaseMaster.TotalAmount.toFixed(2)%>
+                        <%=data.PurchaseMaster.TotalAmount%>
                     </th>
                 </tr>
             </tfoot>
