--- a/web/src/app/inventory/supplier/supplier.component.html
+++ b/web/src/app/inventory/supplier/supplier.component.html
@@ -111,6 +111,7 @@
                                         <td class="text-center">{{ dataList.length - i }}</td>
                                         <td class="text-center">{{data.Name}}</td>
                                         <td class="text-center">{{data.MobileNo1}}</td>
+                                        <td class="text-center">{{data.MobileNo2}}</td>
                                         <td class="text-center">{{data.GSTType}}</td>
                                         <td class="text-center">{{data.GSTNo}}</td>
                                         <td class="text-center">{{(data.PhoneNo !== 'null')? data.PhoneNo: ''}}</td>
