--- a/web/src/app/report/transfer-product-report/transfer-product-report.component.html
+++ b/web/src/app/report/transfer-product-report/transfer-product-report.component.html
@@ -137,7 +137,7 @@
                                         <button type="button" mat-raised-button color="warn" (click)="FromReset()">
                                             Reset
                                         </button>
-                                        <button class=" ms-3" mat-raised-button color="primary"  printTitle="ProductTransfer"  [useExistingCss]="true" printSectionId="ProductT" ngxPrint >
+                                        <button class=" ms-3" mat-raised-button color="primary"  printTitle="ProductTransfer {{this.selectsShop}}"  [useExistingCss]="true" printSectionId="ProductT" ngxPrint >
                                             <i  class="far fa-file-pdf "
                                             style="color: #ffffff;font-size: 22px;cursor: pointer;"> </i>
                                         </button>
